# data-workbench

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .gitmodules-gitee  .gitmodules-github  AGENTS.md  AI_AGENT_GUID.md  CMakeLists.txt  DATA_PROBE_DEVELOPMENT_PLAN.md  DAWorkbenchConfig.cmake.in  Overview.md  build.md  codestandard.xml  coding-standard.md  cpp.hint  e -i 38904c9  mkdocs.yml  next-do.md  readme.md  requirements-docs.txt  requirements.txt  run_tests.bat  submodule.md  todolist.md
plugins/: CMakeLists.txt
plugins/Base/: BaseGlobal.h  BaseNodeFactory.cpp  BaseNodeFactory.h  BasePlugin.cpp  BasePlugin.h  CMakeLists.txt
plugins/DataAnalysis/: CMakeLists.txt  Commands.cpp  Commands.h  DataAnalysExecutor.h  DataAnalysisActions.h  DataAnalysisBaseWorker.cpp  DataAnalysisBaseWorker.h  DataAnalysisGlobal.h  DataAnalysisNodeFactory.cpp  DataAnalysisNodeFactory.h  DataAnalysisPlugin.cpp  DataAnalysisPlugin.h  DataAnalysisResource.qrc  DataAnalysisUI.cpp  DataAnalysisUI.h  DataAnalysis_en_US.ts  DataframeCleanerWorker.cpp  DataframeCleanerWorker.h  DataframeIOWorker.cpp  DataframeIOWorker.h  DataframeOperateWorker.cpp  DataframeOperateWorker.h
plugins/plugin-template/: make-plugin.py  template.json  tmp-template.json
src/: .clang-format  .gitignore  CMakeLists.txt  DAConfigs.h  DAConfigs.h.in  DAGlobals.h  DALibConfig.cmake.in  DataWorkBench.pro  DataWorkBenchPlugins.pro  DataWorkFlow.pro  common.pri  da_en_US.ts  da_zh_CN.ts  function.pri  python_lib.pri  template-python-config.json  编码规范.md
src/APP/: APP.pro  AppMainWindow.cpp  AppMainWindow.h  AppMainWindow.ui  App_zh_CN.ts  CMakeLists.txt  DAAppActions.cpp  DAAppActions.h  DAAppArchive.cpp  DAAppArchive.h  DAAppChartManageWidget.cpp  DAAppChartManageWidget.h  DAAppChartOperateWidget.cpp  DAAppChartOperateWidget.h  DAAppCommand.cpp  DAAppCommand.h  DAAppController.cpp  DAAppController.h  DAAppCore.cpp  DAAppCore.h  DAAppDataManager.cpp  DAAppDataManager.h  DAAppDockingArea.cpp  DAAppDockingArea.h  DAAppFigureFactory.cpp  DAAppFigureFactory.h  DAAppFigureWidget.cpp  DAAppFigureWidget.h  DAAppPluginManager.cpp  DAAppPluginManager.h  DAAppProject.cpp  DAAppProject.h  DAAppRibbonApplicationMenu.cpp  DAAppRibbonApplicationMenu.h  DAAppRibbonArea.cpp  DAAppRibbonArea.h  DAAppSettingDialog.cpp  DAAppSettingDialog.h  DAAppStatusBar.cpp  DAAppStatusBar.h  (+25 more)
src/DAAxOfficeWrapper/: CMakeLists.txt  DAAxObjectExcelSheetWrapper.cpp  DAAxObjectExcelSheetWrapper.h  DAAxObjectExcelWrapper.cpp  DAAxObjectExcelWrapper.h  DAAxObjectWordTableWrapper.cpp  DAAxObjectWordTableWrapper.h  DAAxObjectWordWrapper.cpp  DAAxObjectWordWrapper.h  DAAxOfficeWrapper.pri  DAAxOfficeWrapper.pro  DAAxOfficeWrapperGlobal.h
src/DACommonWidgets/: CMakeLists.txt  DAAbstractSettingPage.cpp  DAAbstractSettingPage.h  DAAligmentEditWidget.cpp  DAAligmentEditWidget.h  DAAligmentEditWidget.ui  DAAligmentPositionEditWidget.cpp  DAAligmentPositionEditWidget.h  DAAligmentPositionEditWidget.ui  DABrushEditWidget.cpp  DABrushEditWidget.h  DABrushEditWidget.ui  DABrushStyleComboBox.cpp  DABrushStyleComboBox.h  DACollapsibleGroupBox.cpp  DACollapsibleGroupBox.h  DACollapsiblePanel.cpp  DACollapsiblePanel.h  DAColorPickerButton.cpp  DAColorPickerButton.h  DACommonPropertySettingDialog.cpp  DACommonPropertySettingDialog.h  DACommonPropertySettingDialog.ui  DACommonWidgets.pri  DACommonWidgets.pro  DACommonWidgetsAPI.h  DACommonWidgetsConfig.cmake.in  DACursorScoped.cpp  DACursorScoped.h  DAFilePathEditWidget.cpp  DAFilePathEditWidget.h  DAFilePathEditWidget.ui  DAFontEditPannelWidget.cpp  DAFontEditPannelWidget.h  DAFontEditPannelWidget.ui  DAPathLineEdit.cpp  DAPathLineEdit.h  DAPenEditWidget.cpp  DAPenEditWidget.h  DAPenStyleComboBox.cpp  (+24 more)
src/DAData/: CMakeLists.txt  DAAbstractData.cpp  DAAbstractData.h  DACommandsDataManager.cpp  DACommandsDataManager.h  DAData.cpp  DAData.h  DAData.pri  DAData.pro  DADataAPI.h  DADataEnumStringUtils.cpp  DADataEnumStringUtils.h  DADataManager.cpp  DADataManager.h  DADataPackage.cpp  DADataPackage.h  DADataPyDataFrame.cpp  DADataPyDataFrame.h  DADataPyObject.cpp  DADataPyObject.h  DADataPySeries.cpp  DADataPySeries.h  DADataPythonBinding.cpp  DADataPythonBinding.h  DADataUndoCommand.cpp  DADataUndoCommand.h
src/DAFigure/: CMakeLists.txt  DAAbstractChartEditor.cpp  DAAbstractChartEditor.h  DAAbstractChartMarker.cpp  DAAbstractChartMarker.h  DAAbstractFigureEditor.cpp  DAAbstractFigureEditor.h  DAAbstractPlotEditor.cpp  DAAbstractPlotEditor.h  DAAbstractRegionSelectEditor.cpp  DAAbstractRegionSelectEditor.h  DAAbstractTwoPointEditor.cpp  DAAbstractTwoPointEditor.h  DAArrowGenerator.cpp  DAArrowGenerator.h  DAArrowSymbol.cpp  DAArrowSymbol.h  DAChartArrowEditor.cpp  DAChartArrowEditor.h  DAChartAxisRangeBinder.cpp  DAChartAxisRangeBinder.h  DAChartCanvas.cpp  DAChartCanvas.h  DAChartCrossTracker.cpp  DAChartCrossTracker.h  DAChartDataInterface.h  DAChartEllipseRegionSelectEditor.cpp  DAChartEllipseRegionSelectEditor.h  DAChartFactory.cpp  DAChartFactory.h  DAChartInteractionInterface.h  DAChartItemCreatInteractor.cpp  DAChartItemCreatInteractor.h  DAChartItemTableModel.cpp  DAChartItemTableModel.h  DAChartLineEditor.cpp  DAChartLineEditor.h  DAChartPlotItemFactory.cpp  DAChartPlotItemFactory.h  DAChartPointMarker.cpp  (+54 more)
src/DAGraphicsView/: CMakeLists.txt  DAAbstractGraphicsSceneAction.cpp  DAAbstractGraphicsSceneAction.h  DAAbstractGraphicsViewAction.cpp  DAAbstractGraphicsViewAction.h  DAAbstractGraphicsViewOverlay.cpp  DAAbstractGraphicsViewOverlay.h  DACommandsForGraphics.cpp  DACommandsForGraphics.h  DAGraphicsCommandsFactory.cpp  DAGraphicsCommandsFactory.h  DAGraphicsDrawRectSceneAction.cpp  DAGraphicsDrawRectSceneAction.h  DAGraphicsDrawTextItemSceneAction.cpp  DAGraphicsDrawTextItemSceneAction.h  DAGraphicsItem.cpp  DAGraphicsItem.h  DAGraphicsItemFactory.cpp  DAGraphicsItemFactory.h  DAGraphicsItemGroup.cpp  DAGraphicsItemGroup.h  DAGraphicsLabelItem.cpp  DAGraphicsLabelItem.h  DAGraphicsLayout.cpp  DAGraphicsLayout.h  DAGraphicsLinkItem.cpp  DAGraphicsLinkItem.h  DAGraphicsMarkItem.cpp  DAGraphicsMarkItem.h  (+45 more)
(+1209 files in other folders)
